# ideckia_client

./: Cargo.toml  readme.md
.github/workflows/: release.yaml
src/: gui.rs  lib.rs  main.rs  websocket_client.rs
src/model/: ideckia_layout.rs  item_state.rs  mod.rs
