[package]
name = "ideckia_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = ["wgpu"] }
serde_json = "1.0.48"
ws = "0.9.2"
image = "0.24.3"
hex_color = "2.0.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
panic = "abort"